--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
   "manifest_version": 2,
-  "version": "0.1.0",
+  "version": "0.1.3",
   "name": "Search all Tabs",
   "description": "A powerful offline indexing and searching tool to find matching tabs in a popup",
 
@@ -14,9 +14,11 @@
      "512": "data/icons/512.png"
   },
   "offline_enabled": true,
+  "homepage_url": "http://add0n.com/search-all-tabs.html",
   "permissions": [
     "<all_urls>",
-    "tabs"
+    "tabs",
+    "storage"
   ],
   "browser_action": {
     "default_popup": "data/popup/index.html",
