--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,7 @@
   "manifest_version": 2,
   "version": "0.1.3",
   "name": "Search all Tabs",
-  "description": "A powerful offline indexing and searching tool to find matching tabs in a popup",
+  "description": "A powerful offline indexing and searching tool to find matching terms in tab's title and content",
 
   "icons": {
      "16": "data/icons/16.png",
@@ -14,7 +14,7 @@
      "512": "data/icons/512.png"
   },
   "offline_enabled": true,
-  "homepage_url": "http://add0n.com/search-all-tabs.html",
+  "homepage_url": "https://add0n.com/search-all-tabs.html",
   "permissions": [
     "<all_urls>",
     "tabs",
@@ -45,5 +45,8 @@
     "scripts": [
       "background.js"
     ]
+  },
+  "commands": {
+    "_execute_browser_action": {}
   }
 }
