--- a/manifest.json
+++ b/manifest.json
@@ -18,7 +18,8 @@
   "permissions": [
     "<all_urls>",
     "tabs",
-    "storage"
+    "storage",
+    "contextMenus"
   ],
   "browser_action": {
     "default_popup": "data/popup/index.html",
