--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
   "manifest_version": 2,
-  "version": "0.1.7",
+  "version": "0.1.8",
   "name": "Search all Tabs",
   "description": "A powerful offline indexing and searching tool to find matching terms in tab's title and content",
 
@@ -21,8 +21,7 @@
     "contextMenus"
   ],
   "optional_permissions": [
-    "tabs",
-    "clipboardWrite"
+    "tabs"
   ],
   "browser_action": {
     "default_popup": "data/popup/index.html",
