--- a/v3/manifest.json
+++ b/v3/manifest.json
@@ -31,5 +31,13 @@
   },
   "background": {
     "service_worker": "worker.js"
+  },
+  "commands": {
+    "_execute_action": {
+      "description": "Open the popup view with a shortcut"
+    },
+    "_execute_sidebar_action": {
+      "description": "Open the sidebar view with a shortcut"
+    }
   }
 }
