--- a/v3/manifest.json
+++ b/v3/manifest.json
@@ -5,20 +5,21 @@
   "description": "__MSG_description__",
   "default_locale": "en",
   "icons": {
-     "16": "data/icons/16.png",
-     "32": "data/icons/32.png",
-     "48": "data/icons/48.png",
-     "64": "data/icons/64.png",
-     "128": "data/icons/128.png",
-     "256": "data/icons/256.png",
-     "512": "data/icons/512.png"
+     "16": "/data/icons/16.png",
+     "32": "/data/icons/32.png",
+     "48": "/data/icons/48.png",
+     "64": "/data/icons/64.png",
+     "128": "/data/icons/128.png",
+     "256": "/data/icons/256.png",
+     "512": "/data/icons/512.png"
   },
   "offline_enabled": true,
   "homepage_url": "https://webextension.org/listing/search-all-tabs.html",
   "permissions": [
     "storage",
     "contextMenus",
-    "scripting"
+    "scripting",
+    "unlimitedStorage"
   ],
   "host_permissions": [
     "<all_urls>"
@@ -27,13 +28,13 @@
     "tabs"
   ],
   "action": {
-    "default_popup": "data/popup/index.html"
+    "default_popup": "/data/popup/index.html"
   },
   "background": {
     "service_worker": "worker.js"
   },
-  "sandbox": {
-     "pages": ["data/xapian/sandbox/index.html"]
+  "content_security_policy": {
+    "extension_pages": "script-src 'self' 'wasm-unsafe-eval'; object-src 'self'"
   },
   "commands": {
     "_execute_action": {},
