Implement browser history search feature with configurable options and UI enhancements

--- a/v3.new/manifest.json
+++ b/v3.new/manifest.json
@@ -20,7 +20,8 @@
     "contextMenus",
     "scripting",
     "favicon",
-    "unlimitedStorage"
+    "unlimitedStorage",
+    "history"
   ],
   "host_permissions": [
     "<all_urls>"
